<resources>
    <string name="app_name">ClickCentral</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="wish_list">Wish List</string>
    <string name="settings">Settings</string>
    <string name="my_profile_bottom">Profile</string>
    <string name="login_signup">Login/Signup</string>
</resources>