<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/categories"
            android:title="@string/categories" />
        <item
            android:id="@+id/cart"
            android:title="@string/cart" />
        <item
            android:id="@+id/orders"
            android:title="@string/orders" />
        <item
            android:id="@+id/profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/wishlist"
            android:title="@string/wish_list" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />

    </group>
</menu>